alignment-issue in gridview

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -2,6 +2,9 @@
     .img-thumbnail {
         width: 100%;
     }
+    .card-btn {
+        margin-top: .5rem;
+    }
   }
   
 .navbar {
@@ -42,13 +45,14 @@
     background: #f9f9f9;
 }
 
+.mat-card {
+    padding: 0;
+}
+
 .grid-view {
     .img-thumbnail {
         padding: .15rem;
         width: 70px;
-    }
-    .mat-card {
-        padding: 0;
     }
     .card-body {
         padding: .5rem;
